--- a/src/components/Section/Section.module.css
+++ b/src/components/Section/Section.module.css
@@ -1,4 +1,6 @@
 .section {
+  max-width: 500px;
+  text-align: center;
   margin-left: auto;
   margin-right: auto;
   padding: 20px;
@@ -8,10 +10,11 @@
 }
 
 .section:first-child {
+  margin-top: 50px;
   margin-bottom: 15px;
 }
 
-.section-title {
+.sectionTitle {
   margin-top: 0px;
   margin-bottom: 0px;
   padding-bottom: 20px;
